Fixing section border spacing

--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -236,7 +236,6 @@ footer ul {
   justify-content: space-around;
   flex-wrap: wrap;
   width: 100%;
-  margin: 35px 0;
 
 }
 .download-btns-div div {
